feat(infra): atualiza configs de infra, OpenAPI, security e health